<resources>
    <string name="app_name">FiCH</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">設定</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="search_title">搜尋</string>
    <string name="title_activity_login">Sign in</string>

    <string name="Frag_Card">醫療卡</string>
    <string name="Frag_Contact">緊急聯絡人</string>
    <string name="Frag_Info">個人資訊</string>
    <string name="Frag_Nearby">鄰近醫療單位</string>
    <string name="Frag_Escape">逃生指引</string>
    <string name="feedback">給予回饋</string>
    <string name="about">關於我們</string>
    <string name="log_out">登出</string>

    <!-- info setting -->
    <string name="lbl_person_name">姓 名</string>
    <string name="lbl_birthday">生 日</string>
    <string name="lbl_blood">血 型</string>
    <string name="lbl_history">個人病史</string>
    <string name="lbl_allergic">藥物過敏</string>
    <string name="setting_ok">完成</string>

    <!-- info setting hint text -->
    <string name="person_name_hint">例:王大明</string>
    <string name="birthday_hint">選擇您的生日</string>
    <string name="blood_hint">您的血型</string>
    <string name="history_hint">請列出您的病史</string>
    <string name="allergic_hint">請列出您的藥物過敏狀況</string>

    <!-- info setting error -->
    <string name="error_name">請輸入姓名</string>
    <string name="error_birthday">請選擇生日</string>
    <string name="error_blood">請輸入血型</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登入</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_qqqnav">QQQNavActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_set_info">SetInfoActivity</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string-array name="setting_period_dialog">
        <item>5分鐘</item>
        <item>10分鐘</item>
        <item>20分鐘</item>
        <item>30分鐘</item>
        <item>60分鐘</item>
    </string-array>
    <string name="title_activity_send">SENDActivity</string>

    <string-array name="genders">
        <item>男生</item>
        <item>女生</item>
    </string-array>
</resources>
