<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.SetInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/titleColor"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Info"
            android:textSize="?actionBarSize"
            android:layout_gravity="center"
            android:textAlignment="center" />
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:padding="15dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lbl_person_name"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="center"/>

                <EditText
                    android:id="@+id/et_person_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="3"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/person_name_hint"
                    android:ems="4"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="性別"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/genderSpinner"
                    android:layout_column="1"
                    android:layout_weight="3"
                    android:spinnerMode="dialog"
                    android:entries="@array/genders"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lbl_birthday"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="center" />

                <!--<EditText-->
                    <!--android:id="@+id/tv_birth"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_column="1"-->
                    <!--android:layout_weight="3"-->
                    <!--android:textAlignment="center"-->
                    <!--android:maxLines="1"-->
                    <!--android:singleLine="true"-->
                    <!--android:hint="@string/birthday_hint"-->
                    <!--android:inputType="date"/>-->

                <Button
                    android:id="@+id/btn_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday_hint"
                    android:layout_column="1"
                    android:layout_weight="3"
                    android:textAlignment="center"
                    android:onClick="onDateClick"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lbl_blood"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/et_blood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="3"
                    android:textAlignment="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:hint="@string/blood_hint"
                    android:ems="4"/>


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lbl_history"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="center" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="3"/>
            </TableRow>
            <EditText
                android:id="@+id/et_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/history_hint"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/lbl_allergic"
                    android:layout_column="0"
                    android:layout_weight="1"
                    android:gravity="center" />
                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="3"/>
            </TableRow>
            <EditText
                android:id="@+id/et_allergic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:hint="@string/allergic_hint"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_ok"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="50dp"
                android:background="@color/color_ok"
                android:onClick="submit"/>

        </TableLayout>
    </ScrollView>


</LinearLayout>