<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="layout.CardFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/customborder"
        android:layout_margin="20dp"
        android:padding="5dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            android:layout_weight="1"
            android:src="@drawable/me"
            android:layout_gravity="center_vertical"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="姓名"
                android:id="@+id/textView1"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="性別"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="年齡"
                android:id="@+id/textView3"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="血型"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="曾子軒"
                android:id="@+id/textView5"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="男"
                android:id="@+id/textView6"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="20"
                android:id="@+id/textView7"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="O"
                android:id="@+id/textView8"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:layout_margin="20dp"
        android:layout_marginTop="0dp"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lbl_history"
            android:id="@+id/textView11" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/history_hint"
            android:id="@+id/tv_history" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/customborder"
        android:layout_margin="20dp"
        android:layout_marginTop="0dp"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lbl_allergic"
            android:id="@+id/textView13" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/allergic_hint"
            android:id="@+id/tv_allergic" />


    </LinearLayout>


</LinearLayout>
</ScrollView>